gcc/testsuite/rust/rustc/ui/suggestions/type-ascription-instead-of-path.rs
fn main() {
    std:io::stdin();
// { dg-error ".E0423." "" { target *-*-* } .-1 }
// { dg-error ".E0423." "" { target *-*-* } .-2 }
}

